--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@fortawesome/fontawesome-free": "^6.4.2",
         "bootstrap": "4.3",
         "datatables.net-dt": "^1.13.6",
-        "jquery": "^3.7.1"
+        "jquery": "^3.7.1",
+        "simplycountdown.js": "^1.7.0"
     }
 }
