--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "bootstrap": "4.3",
         "datatables.net-dt": "^1.13.6",
         "jquery": "^3.7.1",
-        "simplycountdown.js": "^1.7.0"
+        "simplycountdown.js": "^1.7.0",
+        "sweetalert": "^2.1.2"
     }
 }
