--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.4.2",
         "bootstrap": "4.3",
+        "bs-custom-file-input": "^1.3.4",
         "datatables.net-dt": "^1.13.6",
         "jquery": "^3.7.1",
         "simplycountdown.js": "^1.7.0",
