--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "bootstrap": "4.3",
         "bs-custom-file-input": "^1.3.4",
         "datatables.net-dt": "^1.13.6",
+        "datatables.net-rowgroup-dt": "^1.4.1",
         "jquery": "^3.7.1",
         "simplycountdown.js": "^1.7.0",
         "sweetalert": "^2.1.2"
