--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
         "@fortawesome/fontawesome-free": "^6.4.2",
         "bootstrap": "4.3",
         "bs-custom-file-input": "^1.3.4",
+        "datatables.net-buttons-dt": "^2.4.2",
         "datatables.net-dt": "^1.13.6",
         "datatables.net-rowgroup-dt": "^1.4.1",
         "jquery": "^3.7.1",
+        "jszip": "^3.10.1",
+        "pdfmake": "^0.2.7",
         "simplycountdown.js": "^1.7.0",
         "sweetalert": "^2.1.2"
     }
